# clustervms-infra-mgr

./: .dockerignore  Cargo.toml  Dockerfile  README.md  clustervms-compose.yaml  clustervms-infra-mgr-compose.yaml  docker-build.sh  run.sh
src/: infrastructure_manager.rs  main.rs  rest_api.rs
